add some fail fast to ensure that the type is expected